--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,3 +20,19 @@ box-sizing: border-box;
   height: 100vh;
   width: 100vw;
 }
+
+/* marker */
+
+.marker {
+  background-color: rgb(255, 0, 0);
+  width: 60px;
+  height: 60px; 
+  background-size: cover; 
+  border-radius: 50%; 
+  border: 2px solid rgba(0, 0, 0, 0.5); 
+  cursor: pointer;
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
