--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,14 @@
-*{
-padding: 0px;
-margin: 0px;
-box-sizing: border-box;
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #232323;
+  background-color: rgb(255, 255, 255);
 }
 
 /* global */
-#gl_container{
+#gl_container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,33 +19,70 @@ box-sizing: border-box;
 
 /* map */
 
-#map{
+#map {
   height: 100vh;
   width: 100vw;
 }
 
 /*Post*/
-#Pst_container{
-  position: absolute;
-  transform: translate(-50%, -50%);
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+#post_container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+#post_profile {
+  padding: 10px;
+  height: 19%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+#post_pic {
+  padding: 10px;
+  width: 120px;
+  display: flex;
+  flex-direction: row;
+}
+
+#post_pic img {
+  object-fit: cover;
+  width: 90px;
   overflow: hidden;
-  border: 2px solid white;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  clip-path: circle(50%);
+}
+
+#post_profile_det {
+  align-items: center;
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 10px;
+  margin-left: 10px;
+}
+#post_profile img {
+  width: 200px;
+  height: auto;
+}
+
+#post_details {
+  padding: 15px;
+  height: 80%;
 }
 
 /* marker */
 
 .marker_icon {
-  background-color: rgb(252, 0, 0);
   width: 60px;
-  height: 60px; 
-  background-size: cover; 
-  border-radius: 50%; 
-  display: flex; 
-  align-items: center; 
+  height: 60px;
+  background-size: cover;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
 }
 
 .marker_tag {
@@ -54,7 +94,7 @@ box-sizing: border-box;
 
 /* popup */
 
-.popUp_button{
+.popUp_button {
   width: 100%;
   height: 40px;
 }
