--- a/client/src/App.css
+++ b/client/src/App.css
@@ -79,63 +79,19 @@
 
 /*Post*/
 
-#post_container {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-#post_profile {
-  padding: 10px;
-  height: 19%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-#post_pic {
-  padding: 10px;
-  width: 120px;
-  display: flex;
-  flex-direction: row;
-}
-
-#post_pic img {
-  object-fit: cover;
-  width: 90px;
-  overflow: hidden;
-  clip-path: circle(50%);
-}
-
 #post_profile_det {
-  align-items: center;
-  flex: 2;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin-top: 10px;
-  margin-left: 10px;
-}
-#post_profile img {
-  width: 200px;
-  height: auto;
+  margin: 0px 15px;
+  border-radius: 10px;
+  box-shadow: 1px 2px 2px rgb(157, 161, 157);
+  padding: 20px;
 }
 
-#post_details {
-  padding: 15px;
-  height: 80%;
+#post_picture{
+  height: 150px;
+  width: 150px;
 }
 
 /* Profile */
-
-.user_container {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
 
 #user_profile {
   border-radius: 10px;
@@ -188,4 +144,8 @@ margin-bottom: 10px;
   height: 80%;
 }
 
-/* footer */
+/* helpers classes */
+.mg{
+  margin-top: 30px;
+  margin-left: 15px;
+}
