--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,13 +3,135 @@
   margin: 0px;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
-  color: #232323;
-  background-color: rgb(255, 255, 255);
 }
+
+/* Generics */
+/* Boxes */
+
+.genericBox{
+  border-radius: 10px;
+  margin: 10px;
+  padding: 10px;
+  background-color: white;
+}
+
+.genericBox2{
+  border-radius: 10px;
+  padding: 10px;
+  background-color: white;
+}
+
+.box_post{
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  /* background-color: rgba(255, 255, 255,0.4); */
+}
+
+.capsule {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 22px;
+  border-radius: 22px;
+  padding: 12px;
+  background-color:rgb(255, 255, 255);
+}
+
+.capsule_big{
+  border-radius: 22px;
+  padding: 12px;
+  background-color:rgb(255, 255, 255);
+  min-height: 50px;
+  padding: 15px;
+  margin: 10px 0px;
+}
+
+.menu_line{
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 12px;
+  margin-top:20px;
+}
+
+.noMargin{
+  margin: 0px;
+}
+
+
+/*Colors*/
+
+.inverted{
+  background-color: black;
+  color: white;
+}
+
+/* .inverted:hover {
+  background-color: rgb(47, 209, 163);
+  color: white;
+} */
+
+.bg_blue{
+  box-shadow: 2px 2px 7px  rgb(89, 89, 166);
+}
+
+.bg_degradado {
+  background-color: rgb(245, 242, 242);
+  padding: 10px;
+}
+.opacity4{
+  background-color: rgba(245, 242, 242, 0.7);
+}
+
+/*Fonts*/
+.smallFontCont {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-right: 10px;
+}
+
+.smallFont {
+  font-size: 14px;
+}
+
+.bold{
+  font-weight: bold;
+}
+
+.no_dec{
+  text-decoration: none;
+}
+
+/* Position */
+.mgL12{
+  margin-left: 12px;
+  margin-top: 12px;
+}
+
+.flex_center{
+  display: flex;
+  justify-content: space-between;
+}
+
+.center{
+  justify-content: center;
+}
+
+.V_centered{
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 /* RootLayout */
 #rootLayout {
-  min-height: 100vh;
+  background: linear-gradient(45deg, rgb(198, 238, 247), rgb(224, 245, 230));
+  height: calc(100vh - 20px);
+  border: 1px solid rgb(171, 206, 214);
+  border-radius: 15px;
   display: flex;
   flex-direction: column;
 }
@@ -18,95 +140,26 @@
   flex: 1;
 }
 
-#footer {
-  align-items: stretch;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-top: 1px solid #ccc;
-  z-index: 1000;
-}
 
-#footer nav {
-  display: flex;
-  gap: 20px;
-}
-.navLink {
-  font-size: 20px;
-  text-decoration: none;
-}
-/* global */
-#gl_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  width: 100vw;
-  overflow-x: hidden;
-}
-
-/* map */
-
-#map {
-  height: calc(97vh - 30px);
-}
-
-/* marker */
-
-.marker_icon {
-  width: 60px;
-  height: 60px;
-  background-size: cover;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-}
-
-.marker_tag {
-  position: absolute;
-  margin-top: -8px;
-  left: 15px;
-  justify-content: center;
-}
-
-/* popup */
-
-.popUp_button {
-  width: 100%;
-  height: 40px;
-}
-
-/*Post*/
-
-#post_profile_det {
-  margin: 0px 15px;
-  border-radius: 10px;
-  box-shadow: 1px 2px 2px rgb(157, 161, 157);
-  padding: 20px;
-}
-
-#post_picture{
-  height: 150px;
-  width: 150px;
-}
-
-#Slider{
-margin: 15px 0px;
-}
-/* Profile */
+/* Components */
+/* ProfileHeader */
 
 #user_profile {
-  border-radius: 10px;
-  box-shadow: 1px 2px 2px rgb(50, 51, 50);
   height: 120px;
-  margin: 10px;
-  padding: 10px;
   display: flex;
   justify-content: space-around;
 }
 
-#user_profile h2{
+#user_profile_det {
+  align-items: center;
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 10px;
+}
+
+#user_profile h3{
 margin-bottom: 10px;
 }
 
@@ -117,35 +170,21 @@ margin-bottom: 10px;
   border-radius: 15px;
 }
 
-.smallFontCont {
-  width: 100%;
+
+/* SearchBar */
+
+#form_search{
+  height: 50px;
   display: flex;
-  justify-content: space-between;
-  padding-right: 15px;
-}
-.smallFont {
-  font-size: 14px;
-}
-.bold{
-  font-weight: bold;
-}
-#user_profile_det {
   align-items: center;
-  flex: 2;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin-left: 10px;
-}
-.user_profile img {
-  width: 200px;
-  height: auto;
 }
 
-.user_details {
-  padding: 15px;
-  height: 80%;
+.input{
+  border:none;
+  outline: none;
 }
+
+/* PostDetails */
 
 #post_list :first-child{
   border-top: 1px solid grey;
@@ -160,8 +199,117 @@ margin-bottom: 10px;
  
 }
 
-/* helpers classes */
-.mg{
-  margin-top: 30px;
-  margin-left: 15px;
+/*Footer*/
+#footer {
+  align-items: stretch;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid #ccc;
+  z-index: 1000;
+  text-decoration: none;
 }
+
+#footer nav {
+  display: flex;
+  gap: 20px;
+}
+.navLink {
+  font-size: 20px;
+  text-decoration: none;
+}
+
+
+/* map */
+
+#map{
+  height: 80vh ;
+  width: 95%;
+  border-radius: 10px;
+}
+#map_box{
+padding: 10px;
+
+}
+/* marker */
+
+.marker_icon {
+background-color: rgb(19, 169, 142);
+
+}
+
+.marker_tag {
+  position: absolute;
+  margin-top: -8px;
+  left: 15px;
+  justify-content: center;
+}
+
+/* popup */
+
+.custom-popup {
+  width: 200px;
+  color: white;
+  padding: 10px;
+  border-radius: 8px;
+  font-size: 12px;
+  background: linear-gradient(45deg, rgb(198, 238, 247), rgb(224, 245, 230));
+  display: flex;
+  justify-content: center;
+}
+
+#popUp{
+  max-width: 150px;
+  height: 150px;
+}
+
+#popUp p{
+  width: 120px;
+  text-wrap: wrap;
+  
+}
+#popUp span{
+ position: absolute;
+ color: red;
+  
+}
+
+.popUp_button {
+  width: 100px;
+  height: 40px;
+  align-self: center;
+}
+
+
+/*Views*/
+/* Profile */
+
+
+
+
+
+/*Tags-View*/
+
+
+#tags_list{
+  display: flex;
+  justify-content: row;
+  flex-wrap: wrap;
+  height: max-content;
+  padding:10px;
+  gap:5px;
+}
+
+
+
+/*Post-View*/
+
+#Slider{
+height: 250px;
+}
+
+#post_details{
+  margin-bottom: 15px;
+}
+
